Fixed layout of the index button on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1352,7 +1352,6 @@ button {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  cursor: pointer;
 }
 
 .menu_item_img {
@@ -1607,7 +1606,7 @@ button {
 .single_team_img_services {
   width: 307px;
   height: 205px;
-  border: 5px solid var(--colorWhite);
+  border: 10px solid var(--colorWhite);
   border-radius: 50%;
   box-shadow: var(--boxShadow);
   overflow: hidden;
@@ -1623,10 +1622,6 @@ button {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
-}
-
-.single_team_img_services:hover {
-  border: 5px solid #ff7c08;
 }
 
 .single_team_text h4 {
@@ -1980,6 +1975,22 @@ button {
   padding: 0 70px;
 }
 
+.hero-box {
+  position: absolute;
+}
+
+.hero-button:hover {
+  margin-bottom: 20px;
+}
+
+:root {
+  --primary: #080808;
+  --secondary: #ff7c08;
+  --white: #ffffff;
+  --secondary-blue: #0024b2;
+  --tertiary-blue: #000f5c;
+}
+
 .hero-button {
   background: var(--secondary);
   color: var(--white);
@@ -1993,6 +2004,49 @@ button {
   overflow: hidden;
   border: none;
   z-index: 0;
+}
+
+.description {
+  position: relative;
+  display: block;
+  z-index: 3;
+  color: var(--white);
+  font-size: 25px;
+  font-weight: 600;
+}
+
+.hero-button:before,
+.hero-button:after {
+  content: "";
+  position: absolute;
+  height: 1px;
+  width: 1px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  border-radius: 50%;
+  z-index: 0;
+}
+
+.hero-button:before {
+  background: var(--secondary-blue);
+  transition: 0.6s ease-in;
+  transition-delay: 0.1s;
+}
+
+.hero-button:after {
+  background: var(--tertiary-blue);
+  transition: 0.8s ease;
+  transition-delay: 0.3s;
+}
+
+.hero-button:hover:before,
+.hero-button:hover:after {
+  transform: translate(-50%, -50%) scale(310);
+}
+
+.hero a {
+  margin-top: 260px;
 }
 
 .hero-slogan {
